--- a/index.html
+++ b/index.html
@@ -3,51 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esther's portfolio</title>
+    <title>RESUME</title>
 </head>
 <body>
-    <h1>Esther's portfolio</h1>
-    <h2>Am a web developer</h>
-    </hr>
-    <h3><a href="./4.3 HTML Porfolio Project/public/movie-ranking.html">movie ranking</a>
-    <h5><img src="./4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height="200" alt="movie ranking"/></h5>
+    <h1>Esther Wambui Gatimu</h1>
+    <h2><img src="./myprofile.png.jpeg" height="100" alt="A girl"/></h2>
+    <h2>Summary</h2>
+    <p>Iam a dedicated and hardworking individual trying to build a career in Web development</p>
+<hr/>
+<ul>
+<li>Esther Wambui Gatimu</li>
+<li>Mobile: 0795833361</li>
+<li>Email: esthergatimu29@gmail.com</li>
+</ul>
+<ul>
+<h2>PERSONAL DETAILS</h2>
+<li>Date of birth: 29/08/2004</li>
+<li>Nationality: Kenyan</li>
+<li>Sex: Female</li>
+<li>Language: English and Kiswahili</li>
+</ul>
+<h2>CAREER OBJECTIVE</h2>
+<p>Self-motivated and detail-oriented in Diploma in Business Information Technology (DBIT) graduate with foundational skills in IT support, database management and web development. Seeking an opportunity to apply technical expertise in a dynamic organization.</p>
+<ul>
+<h2>EDUCATION</h2> 
+<li>2023-2024: KCA University</li>
+        <p>Diploma in Business Information Technology</p>
+<li>2019-2022: Kangubiri Girls High School</li>
+        <p> Kenya Certificate of Secondary Education (KCSE) (C-)</p>
+<li>2007-2018: C&J Mount Carmel Academy</li>
+        <p> Kenya Certificate of Primary Education (KCPE) (342)</p>
+        </ul>
+        <ol>
+<h2>KEY COURSEWORK</h2>
+<li>Computer Applications Software</li>
+<li>Computer Organization & Architecture</li>
+<li>Database Management System</li>
+<li>Internet Application Programming</li>
+<li>Business Application Programming</li>
+<li>System Analysis and Design</li>
+<li>Computer Programming Concepts</li>
+</ol>
+<ul>
+<h2>TECHNICAL SKILLS</h2>
+<li>Programming Languages: HTML, CSS, Javascript</li>
+<li>Database Management: Ms Access, MySQL</li>
+<li>Web development: PHP</li>
+<li>Software Applications: Microsoft Office Suite</li>
+</ul>
 
-    <h3><a href="./4.3 HTML Porfolio Project/assets/images/birthday-invite.png">Birthday Invite</a></h3>
-    <h5><img src="./4.3 HTML Porfolio Project/assets/images/birthday-invite.png" height="200" alt="Birthday invite"/></h5>
-
-    <h3><a href="./4.3 HTML Porfolio Project/public/about.html">About me</a></h3>
-    <h3><a href="./4.3 HTML Porfolio Project/public/contact.html">Contact</a></h3>
+<h2>WORK EXPERIENCE</h2>
+<p>IT support Attachee – Tourism Fund Nairobi </p>
+<p>From (02/12/2024) – To (02/03/2025)</p>
+<p>Assisted in troubleshooting Hardware and software issues</p>
+<p>Provided technical support to end-users</p>
+<ul>
+<h2>PROJECTS</h2>
+<li>Airline Management System – Developed a database system to manage student records using Visual Basic 2010 and Ms Access</li>
+<li>Web design project – Developed a user-friendly website for a hypothetical business using HTML, CSS and Java script</li>
+</ul>
+<ul>
+<h2>SOFT SKILLS</h2>
+<li>Effective written and verbal communication</li>
+<li>Time management</li>
+<li>Basic knowledge of project management methodologies like Agile</li>
+</ul>
+<h2><p>REFERENCE</p></h2>                                     <h2> <p> CONTACT</p></h2>
+<p>Laban Mwangi </p>                                              <p> 0723957611</p> 
+<p>Jedidah Wanjiru </p>                                           <p>0707028148</p> 
+<p>Geoffrey Ochieng’ </p>                                        <p> g.ochieng@kcau.ac.ke</p> 
+<hr/>
+<footer> @ Esther Gatimu. All Rights Reserved</footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
